reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__state.rs_line_276_col_9_001.log

*** crates/tracewake-core/src/state.rs:276:9: replace PhysicalState::sleep_affordances -> &BTreeMap<SleepAffordanceId, SleepAffordanceState> with Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), Default::default())])))

*** mutation diff:
--- crates/tracewake-core/src/state.rs
+++ replace PhysicalState::sleep_affordances -> &BTreeMap<SleepAffordanceId, SleepAffordanceState> with Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), Default::default())])))
@@ -268,17 +268,17 @@
         &self.food_supplies
     }
 
     pub fn workplaces(&self) -> &BTreeMap<WorkplaceId, WorkplaceState> {
         &self.workplaces
     }
 
     pub fn sleep_affordances(&self) -> &BTreeMap<SleepAffordanceId, SleepAffordanceState> {
-        &self.sleep_affordances
+        Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), Default::default())]))) /* ~ changed by cargo-mutants ~ */
     }
 
     pub const fn need_model(&self) -> &NeedModelState {
         &self.need_model
     }
 }
 
 impl AgentState {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/state.rs` has changed (1781905578.759925420s, 3s after last build at 1781905575.847925384s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `SleepAffordanceId: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:276:50
    |
276 |         Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), Default::default())]))) /* ~ changed by cargo-mutants ~ */
    |                                                  ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `SleepAffordanceId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
134 | stable_id_type!(SleepAffordanceId);
    | ---------------------------------- in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `SleepAffordanceState: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:276:70
    |
276 |         Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), Default::default())]))) /* ~ changed by cargo-mutants ~ */
    |                                                                      ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `SleepAffordanceState`
   --> crates/tracewake-core/src/state.rs:483:1
    |
483 | pub struct SleepAffordanceState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
